improve some text

--- a/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
+++ b/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
@@ -185,7 +185,7 @@ For this experiment, use the \lstbash{man} page for \lstbash{tcpdump} to find ou
 expressions that can be used.
 
 If there is no traffic on the network, you may generate traffic with some applications
-(e.g.\ \lstbash{telnet}, \lstbash{ping}, etc.).
+(e.g. \lstbash{telnet}, \lstbash{ping}, etc.).
 
 \begin{report}
     \item Explain briefly the purposes of the following \lstbash{tcpdump} expressions.
