--- a/2 A single segment network/A single segment network.tex
+++ b/2 A single segment network/A single segment network.tex
@@ -350,11 +350,11 @@ Run \lstbash{tcpdump -enx} on all the hosts.
 Then, do the following three experiments:
 
 \begin{enumerate}
-    \item Execute \lstbash{telnet} from one of two hosts with the duplicate IP address to a host with unique IP address (e.g.\ \textit{h0} $\rightarrow$ \textit{h2}).
+    \item Execute \lstbash{telnet} from one of two hosts with the duplicate IP address to a host with unique IP address (e.g. \textit{h0} $\rightarrow$ \textit{h2}).
 
           Now, from the other host with the duplicate IP address, execute \lstbash{telnet} command to the same host (\textit{h1} $\rightarrow$ \textit{h2}).
 
-          Observe what happens and save the \lstbash{tcpdump} output and the ARP tables in all the hosts in your group.
+          Observe what happens and save the \lstbash{tcpdump} output and the ARP tables in all the hosts.
 
     \item Execute \lstbash{telnet 128.238.66.100} (or \lstbash{telnet 128.238.66.104}) from the \textit{h2}.
           Which host provides the telnet connection?
