--- a/9 Network management and security/Network management and security.tex
+++ b/9 Network management and security/Network management and security.tex
@@ -300,7 +300,7 @@ State or Province Name (full name) [Some-State]:Tehran
 Locality Name (eg, city) []:Tehran 
 Organization Name (eg, company) [Internet Widgits Pty Ltd]:Tehran University 
 Organizational Unit Name (eg, section) []:Network Laboratory 
-Common Name (e.g.\ server FQDN or YOUR name) []:netlab.ut.ac.ir
+Common Name (e.g. server FQDN or YOUR name) []:netlab.ut.ac.ir
 Email Address []:netlab@ut.ac.ir
     \end{lstlisting}}
 
@@ -345,7 +345,7 @@ Browse again page as \path{secure http}.
 
 \section{Trace Log}
 Go to \path{log} folder at \path{/var/log/} to examine the log files in your host.
-If a log (e.g.\ the \textit{Apache Access Log} at \path{/var/log/apache2/access.log}) is too long, use \lstbash[emph={keyword}]{grep keyword access.log | tail} (e.g.\ \textbf{GET}) in the {console} to display those log entries containing the keyword.
+If a log (e.g. the \textit{Apache Access Log} at \path{/var/log/apache2/access.log}) is too long, use \lstbash[emph={keyword}]{grep keyword access.log | tail} (e.g. \textbf{GET}) in the {console} to display those log entries containing the keyword.
 Enter the keyword \textbf{failed} or \textbf{404} to display logged failures.
 
 See other log files.
